--- a/UserInterface/package.json
+++ b/UserInterface/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.5.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
     "popper.js": "^1.16.1",
