--- a/CnxdevsoftUmbraco/CnxdevsoftUmbraco/CnxdevsoftUmbraco.csproj
+++ b/CnxdevsoftUmbraco/CnxdevsoftUmbraco/CnxdevsoftUmbraco.csproj
@@ -288,6 +288,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\HomeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
