--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,4 +1,4 @@
 **/node_modules
-/vs./**
-/CnxdevsoftUmbraco/.vs/**
-/CnxdevsoftUmbraco/CnxdevsoftUmbraco/bin/**
+**/.vs/**
+**/CnxdevsoftUmbraco/.vs/**
+**/CnxdevsoftUmbraco/CnxdevsoftUmbraco/bin/**
