--- a/CnxdevsoftUmbraco/CnxdevsoftUmbraco/App_Data/packages/installedPackages.config
+++ b/CnxdevsoftUmbraco/CnxdevsoftUmbraco/App_Data/packages/installedPackages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="1" version="4.0.2" url="https://umbraco.com" name="The Starter Kit" packagePath="C:\Users\apich\source\repos\CNXDevSoftWeb\CnxdevsoftUmbraco\CnxdevsoftUmbraco\App_Data\packages\ced954d1-8c0f-4abe-bdda-99e7a787d052.umb" iconUrl="" umbVersion="8.0.0" packageGuid="d83ac276-b0a1-4607-9093-9afb49a313e5" view="">
+  <package id="1" version="4.0.2" url="https://umbraco.com" name="The Starter Kit" packagePath="C:\Users\Asus ROG\source\repos\CNXDevSoftWeb\CnxdevsoftUmbraco\CnxdevsoftUmbraco\App_Data\packages\ced954d1-8c0f-4abe-bdda-99e7a787d052.umb" iconUrl="" umbVersion="8.0.0" packageGuid="dd37ddb2-ea4c-4943-aaa7-771f0cf6933a" view="">
     <license url="http://opensource.org/licenses/MIT"><![CDATA[MIT License]]></license>
     <author url="https://umbraco.com"><![CDATA[Umbraco HQ]]></author>
     <contributors />
