--- a/CnxdevsoftUmbraco/CnxdevsoftUmbraco/packages.config
+++ b/CnxdevsoftUmbraco/CnxdevsoftUmbraco/packages.config
@@ -33,6 +33,7 @@
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.10.9" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MiniProfiler" version="4.0.138" targetFramework="net472" />
   <package id="MiniProfiler.Shared" version="4.0.138" targetFramework="net472" />
